# trading_ai_system_refactored

./: IMPROVEMENT_RECOMMENDATIONS_FA.md  INSTALLATION_GUIDE.md  __version__.py  main.py  new_file.txt  pyproject.toml  setup.py  setup_project.bat  setup_project.sh
cli/: __init__.py  commands.py  menu_system.py
docs/: UNIT_TESTS_GUIDE_FA.md  type_hints_examples.py
docs/bugs/: DETAILED_BUGS_AND_SOLUTIONS.md  QUICK_SUMMARY_ROADMAP.md  TRADING_AI_SYSTEM_COMPLETE_AUDIT.md
docs/info/: ARCHITECTURE_AND_DIAGRAMS_FA.md  COMPLETE_SETUP_READY.txt  FILES_INDEX.md  FINAL_SUMMARY.txt  MAIN_ENTRY_GUIDE.md  PROJECT_ANALYSIS_FA.md  QUICK_START_GUIDE_FA.md  README.md  SETUP_PLACEMENT_GUIDE.md  SETUP_SUMMARY.txt
docs/type hints/: TYPE_HINTS_GUIDE_FA.md  type_hints_module.py
tests/: __init__.py  conftest.py  test_core.py  test_data.py  test_features.py  test_integration.py  test_live_trading.py  test_models.py  test_performance_benchmarks.py  test_risk.py  test_security_deployment.py  test_strategy.py
trading_ai_system/: __init__.py
trading_ai_system/core/: CORE_MODULE_README.txt  __init__.py  core.py
trading_ai_system/data/: DATA_MODULE_README.txt  __init__.py  data.py
trading_ai_system/discovery/: __init__.py  _init.py  discovery.py  indicator_discovery.py
trading_ai_system/features/: FEATURES_MODULE_README.txt  __init__.py  features.py
trading_ai_system/live/: LIVE_MODULE_README.txt  __init__.py  live.py
trading_ai_system/models/: MODELS_MODULE_README.txt  __init__.py  models.py
trading_ai_system/risk/: __init__.py  risk.py
trading_ai_system/strategy/: __init__.py  strategy.py
trading_ai_system/utils/: __init__.py  utils.py
